# AutoCoder

./: .gitignore  .gitmodules  CODE_QUALITY_ANALYSIS.md  GEMINI_BLACKBOARD_UI_TASK.md  M1_IMPLEMENTATION_PLAN.md  NEXT_INTEGRATIONS.md  QA_MODE_ARCHITECTURE.md  README.md  VENDORED_SKILLS_ARCHITECTURE.md  config.example.toml  index.html  package-lock.json  package.json  tailwind.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/prompts/: code_claude.md  compact_summary.md  debug_claude.md  debug_codex.md  director_chat.md  director_system.md  director_user_template.md  plan_claude.md  plan_claude_response.md  plan_codex.md  plan_codex_final.md  plan_director_verdict.md  plan_name.md  plan_review_claude.md  plan_review_claude_response.md  plan_review_codex.md  plan_review_codex_final.md  plan_review_codex_parallel.md  plan_review_synthesis.md  plan_synthesis.md  qa_claude.md  review_security.md  review_specialist.md  test_claude.md
src-tauri/src/: config.rs  detect.rs  director.rs  errors.rs  evidence.rs  history.rs  lib.rs  main.rs  memory.rs  planning_schema.rs  prompts.rs  sidecar.rs  tool_runner.rs  verifier.rs  workspace.rs  workspace.rs.patch
src-tauri/src/bundled_skills/: loader.rs  mod.rs  parsed_skill.rs
src-tauri/src/bundled_skills/frontend_dev/: SKILL.md  mod.rs  prompt.rs
src-tauri/src/bundled_skills/fullstack_dev/: SKILL.md  mod.rs  prompt.rs
src-tauri/src/bundled_skills/implement_specs/: SKILL.md
src-tauri/src/bundled_skills/simplify/: SKILL.md  mod.rs  prompt.rs
src-tauri/src/hooks/: mod.rs
src-tauri/src/skills/: blackboard.rs  blackboard_parser.rs  blackboard_render.rs  build_gate.rs  code.rs  code_events.rs  code_prompts.rs  debug.rs  document.rs  evidence.rs  isolated_workspace.rs  merge_engine.rs  mod.rs  plan.rs  plan_board.rs  planning_schema.rs  qa.rs  review.rs  runner_claude.rs  runner_codex.rs  runner_lifecycle.rs  runner_process.rs  runner_workspace.rs  runners.rs  test_skill.rs  vendored.rs  verifier.rs
src-tauri/src/tool_runner/: anthropic.rs  errors.rs  execute.rs  mod.rs  openai.rs  providers.rs  system_prompt.rs  tools.rs
src-tauri/src/tools/: agent.rs  ask_user.rs  bash.rs  brief.rs  config_tool.rs  enter_plan.rs  enter_worktree.rs  exit_plan.rs  exit_worktree.rs  file_edit.rs  file_read.rs  file_write.rs  glob_tool.rs  grep.rs  list_mcp.rs  lsp.rs  mcp.rs  mcp_auth.rs  mod.rs  notebook_edit.rs  path_utils.rs  powershell.rs  read_mcp.rs  remote_trigger.rs  repl.rs  schedule_cron.rs  send_message.rs  skill.rs  sleep.rs  sub_agent_runner.rs  synthetic_output.rs  task_create.rs  task_get.rs  task_output.rs  task_stop.rs  task_update.rs  team_create.rs  team_delete.rs  todo_write.rs  tool_search.rs  (+2 more)
src-tauri/src/tools/agent/: mod.rs  (+1 more)
(+157 files in other folders)
