[package]
name = "ai-dev-hub"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ai_dev_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "0.8"
dirs = "6"
chrono = { version = "0.4", features = ["clock"] }
similar = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
async-trait = "0.1"
glob = "0.3"

[dev-dependencies]
tempfile = "3"

# Clippy lint configuration.
#
# Note: CI runs `cargo clippy --all-targets -- -D warnings`, which promotes
# every Clippy warning to an error. The lints listed below are style-only
# suggestions whose strictness is not worth blocking the build over; each
# has been reviewed and judged acceptable for this codebase:
#
#   * too_many_arguments — many skill/agent APIs naturally take a lot of
#     parameters (window, app_handle, token, config, prompts, ...). Grouping
#     them into structs would add more boilerplate than clarity.
#   * needless_borrows_for_generic_args, redundant_closure, etc — cosmetic.
#   * manual_range_contains, match_like_matches_macro, map_or — readability
#     preferences; the hand-written forms read better in context.
#
# The functional lints (correctness, suspicious, perf) remain enforced.
[lints.clippy]
too_many_arguments = "allow"
needless_borrows_for_generic_args = "allow"
manual_range_contains = "allow"
match_like_matches_macro = "allow"
unnecessary_map_or = "allow"
redundant_closure = "allow"
useless_format = "allow"
unnecessary_literal_unwrap = "allow"
needless_splitn = "allow"
question_mark = "allow"
derivable_impls = "allow"
ptr_arg = "allow"
manual_pattern_char_comparison = "allow"
single_component_path_imports = "allow"
empty_line_after_doc_comments = "allow"
doc_lazy_continuation = "allow"
suspicious_open_options = "allow"
vec_init_then_push = "allow"
